# mosaic-fl

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AVALIACAO_MOSAIC_FL.md  AVALIACAO_PROJETO.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.client  Dockerfile.server  Dockerfile.wire  LGPD_ROADMAP.md  Makefile  README.md  README_DOCKER.md  README_INFRASTRUCTURE.md  README_v2.md  TODO.md  alembic.ini  benchmark.py  build-and-push-image-docker-registry.sh  build_standard_vocab.py  datasource.py  db_setup_guide.md  docker-compose.db.yml  docker_build_push.sh  install.sh  makefile  publicar_pacote_cliente.sh  publicar_pacote_servidor.sh  publish-client.sh  publish-server.sh  pyproject.toml  requirements.txt  run.py  run_experiments_v2.py  run_v2.py  setup.bat  setup.sh  superlink.db
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_extend_patients.py  003_create_attendances.py  004_extend_exam_records.py  005_create_clinical_outcomes.py  006_extend_patients_attendances.py  007_add_diagnosis_to_attendances.py  008_term_dictionary.py  009_analyte_references.py  010_simulation_node_config.py  010a_fl_checkpoints.py  011_fl_trainings.py  012_evaluation_json.py  013_fl_round_history.py  014_fl_trainings_checkpoint_criterion.py  015_fl_trainings_resource_metrics.py  016_fl_trainings_evaluation_metrics.py  017_fl_trainings_partition_mode.py  018_fl_trainings_ece_pre.py  019_fl_trainings_dp_epsilon.py  020_fl_trainings_gpu_energy.py  021_fl_trainings_run_classification.py
checkpoints/: experiment.db  round_1.sha256
ci_cd/: ci-cd-github-actions.yml
ci_cd/helm/: Chart.yaml  README_HELM.md  _helpers.tpl  client-deployment.yaml  network-policies.yaml  pvcs.yaml  scheduler-cronjob.yaml  server-deployment.yaml  serviceaccount.yaml  values.yaml
docs/: CHANGELOG.md  CONTRIBUTING.md  Comparativo_Metodologia_Planejada_vs_Executada.md  Diagramas_Arquitetura_C4_UML.md  FLUXO_APRENDIZADO_FEDERADO.md  Linha_do_Tempo_MOSAIC-FL.md  Metodologia MOSAIC-FL - Final Corrigido.md  Passo_a_Passo_Validar_RAG_API.md  README_SCHEDULER.md  Racional_Classes_Prognostico.md  Sumario_Simulacao.md  Sumario_Treinamento.md  Sumario_Treinamento_Parte2.md  Sumario_Treinamento_Parte3.md  TODO.md  Tutorial_Rede_Federada_Real_Desktop_Notebook.md  adequacoes_clinicalpath_mosaicfl.md  ambiente_simulacao.md  analise_dados_fapesp_behrt.md  analise_erros_clinicos.md  api_predict_documentacao.md  avaliacao_metodologia_mosaicfl.md  dados_necessarios_texto_defesa.md  documentacao_etapas_legadas.md  motivacoes_enquadramento_mosaicfl_como_cdss.md  pesquisa_baseline_implementacao_fontes_bibliograficas.md
experiments/: __init__.py  experiment_server.py  federated_training.py  run_behrt_pooled.py  run_bootstrap_ci.py  run_experiments_simulation.py  run_experiments_v2.py  run_federated_real.py  run_recalibrate.py  run_seed_sensitivity.py  run_training.py
experiments/data/: ablation_demo_20260625_083933.json  ablation_demo_20260625_095404.json  ablation_demo_20260625_135838.json  ablation_demo_20260625_155746.json  ablation_demo_20260625_212058.json  ablation_demo_20260626_034002.json  ablation_demo_20260626_175315.json  ablation_demo_20260628_120225.json  ablation_demo_20260628_225504.json  ablation_demo_20260629_102849.json  ablation_demo_20260629_105726.json  ablation_demo_20260629_140632.json  ablation_demo_20260629_210357.json  ablation_demo_20260629_212828.json  ablation_demo_20260629_235505.json  ablation_demo_20260630_104137.json  ablation_demo_20260630_105324.json  ablation_demo_20260630_131850.json  ablation_demo_20260630_213450.json  ablation_demo_20260630_213613.json  ablation_demo_20260630_214958.json  ablation_demo_20260630_222051.json  ablation_demo_20260630_222332.json  ablation_demo_20260630_223742.json  ablation_demo_20260701_091230.json  ablation_demo_20260701_091413.json  ablation_demo_20260701_092814.json  ablation_demo_20260701_212510.json  ablation_demo_20260701_212658.json  ablation_demo_20260701_213430.json  ablation_demo_20260701_214140.json  ablation_demo_20260702_064830.json  ablation_demo_20260702_065133.json  ablation_demo_20260702_070552.json  ablation_demo_20260702_071214.json  ablation_demo_20260702_075129.json  ablation_demo_20260702_075418.json  ablation_demo_20260702_080827.json  ablation_demo_20260702_081907.json  (+250 more)
infrastructure/: health_server.py  logging_setup.py  metrics.py  tls.py
infrastructure/mosaicfl_scheduler/: __init__.py  __main__.py  client_availability_checker.py  pyproject.toml  round_training_fl_dispatcher.py  schedule_state.py  scheduler_cli.py  scheduler_daemon.py  state_store.py
infrastructure/mosaicfl_scheduler/scheduler_daemon/: __init__.py  cli.py  config.py  core.py  lifecycle_mixin.py
infrastructure/mosaicfl_server/: __main__.py  config_loader.py  pyproject.toml  runner.py  server_daemon.py  state_store.py  strategy.py
infrastructure/mosaicfl_server/runner/: __init__.py  checkpoint_io.py  cli.py  config.py  health.py  legacy_server.py  superlink.py
infrastructure/mosaicfl_server/strategy/: __init__.py  calibration_mixin.py  core.py  fit_config_mixin.py  watchdog_mixin.py
integration/: column_resolver.py  term_manager.py
logs/: round_10_metrics.json  round_1_metrics.json  round_2_metrics.json  round_3_metrics.json  round_4_metrics.json  round_5_metrics.json  round_6_metrics.json  round_7_metrics.json  round_8_metrics.json  round_9_metrics.json  server_health.json  training_state.json
scripts/: auditar_classes_atuais.py  build_standard_vocab.py  compute_analyte_references.py  datasource.py  export_checkpoint.py  gen_certs.sh  gerar_certs_tls.sh  iniciar_cliente_fl.sh  iniciar_servidor_fl.sh  reset_data.py  start_superlink.sh  start_supernode.sh  test_pipeline.py
src/: __init__.py  client.py  config.py  data_loader.py  extract_patterns.py  model.py  preprocess.py  rag_system.py  server.py
tests/: test_clinicalpath_exporter.py  test_config_loader.py  test_fl_cycle_explained.py  test_infrastructure.py  test_mosaicfl.py  test_mosaicfl_api.py  test_v2_core.py
wire-production/: .env.example  docker-compose.yml
(+279 files in other folders)
