[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaicfl"
version = "0.2.0"
description = "MOSAIC-FL: Predição Clínica Federada com BEHRT + RAG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jacqueline Abreu", email = "abreujacline@gmail.com"}
]
keywords = ["federated-learning", "clinical-ai", "BEHRT", "RAG", "ehr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "flwr>=1.5.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0", "black", "ruff"]

[project.urls]
Homepage = "https://github.com/JacAbreu/mosaic-fl"
Repository = "https://github.com/JacAbreu/mosaic-fl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["src/mosaicfl/v2", "infrastructure"]
omit = [
    # legado sem testes
    "src/mosaicfl/v1/*",
    "src/mosaicfl/experiments/*",
    # entrypoints e wrappers — sem lógica própria
    "*/__main__.py",
    "*/__init__.py",
    "*/infrastructure/*/server_daemon.py",
    "*/infrastructure/*/client_daemon*.py",
    "*/infrastructure/*/scheduler_cli.py",
    # runners bloqueantes (fl.server.start_server / APScheduler)
    "*/infrastructure/mosaicfl_server/runner.py",
    "*/infrastructure/mosaicfl_client/runner.py",
    # conectores de banco que exigem infraestrutura real
    "src/mosaicfl/v2/data_loader.py",
    "*/infrastructure/mosaicfl_client/datasource.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    # blocos de debug/desenvolvimento não executados em testes
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true


