[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mosaicfl"
version = "0.2.0"
description = "MOSAIC-FL: Predição Clínica Federada com BEHRT + RAG"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Jacqueline Abreu", email = "abreujacline@gmail.com"}
]
keywords = ["federated-learning", "clinical-ai", "BEHRT", "RAG", "ehr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "flwr>=1.8.0",
    "chromadb>=0.4.0",  # legado — usado apenas por ChromaDBConfigLoader
    "sentence-transformers>=2.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-json-logger>=2.0.0",
    "prometheus_client>=0.17.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0", "ruff>=0.1.0", "httpx2>=2.0.0", "psutil>=5.9.0", "alembic>=1.13.0"]
service = ["fastapi>=0.100.0", "uvicorn[standard]>=0.22.0", "watchdog>=3.0.0", "apscheduler>=3.10.0"]
db = ["sqlalchemy>=2.0.0", "psycopg2-binary>=2.9.0", "pgvector>=0.3.0"]

[project.urls]
Homepage = "https://github.com/JacAbreu/mosaic-fl"
Repository = "https://github.com/JacAbreu/mosaic-fl"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
markers = [
    "e2e: ciclo FL real sem mocks — requer apenas Python e dependências do projeto",
]
addopts = "-m 'not e2e'"

# ── Flower App (flwr run) ──────────────────────────────────────────────────────
[tool.flwr.app]
publisher = "mosaic-fl"

[tool.flwr.app.components]
serverapp = "infrastructure.mosaicfl_server.runner:app"
clientapp = "infrastructure.mosaicfl_client.runner:app"

[tool.flwr.app.config]
num-rounds            = 10
local-epochs          = 1
proximal-mu           = 1.0
min-clients           = 2
round-timeout-seconds = 300

# Federação local para desenvolvimento (sem SuperLink externo)
[tool.flwr.federations.local-sim]
options.num-supernodes = 3

# Federação de produção (requer flower-superlink rodando)
[tool.flwr.federations.production]
address = "superlink:9093"
insecure = false

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.coverage.run]
source = ["src/mosaicfl/core", "infrastructure", "experiments"]
omit = [
    # legado sem testes
    "src/mosaicfl/v1/*",
    "src/mosaicfl/experiments/*",
    # entrypoints e wrappers — sem lógica própria
    "*/__main__.py",
    "*/__init__.py",
    "*/infrastructure/*/server_daemon.py",
    "*/infrastructure/*/client_daemon*.py",
    "*/infrastructure/*/scheduler_cli.py",
    # runners bloqueantes (fl.server.start_server / APScheduler)
    "*/infrastructure/mosaicfl_server/runner.py",
    "*/infrastructure/mosaicfl_client/runner.py",
    # conectores de banco que exigem infraestrutura real
    "src/mosaicfl/core/data_loader.py",
    "*/infrastructure/mosaicfl_client/datasource.py",
]

[tool.coverage.report]
exclude_lines = [
    "if __name__ == .__main__.:",
    "pragma: no cover",
    # blocos de debug/desenvolvimento não executados em testes
    "raise NotImplementedError",
]
show_missing = true
skip_empty = true


